# QnTools

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md
cmake/: QnToolsConfig.cmake.in
docs/: CREDITS  Doxyfile.in
include/base/QnTools/: Axis.hpp  BootStrap.hpp  Cuts.hpp  DataContainer.hpp  DataContainerHelper.hpp  FitResult.hpp  QVector.hpp  ReSamples.hpp  Stat.hpp  StatCalculate.hpp  StatCollect.hpp  Statistic.hpp  Statistics.hpp  Stats.hpp  TDigest.hpp
include/correction/QnTools/: Alignment.hpp  CorrectionAxis.hpp  CorrectionBase.hpp  CorrectionCuts.hpp  CorrectionHistogramBase.hpp  CorrectionHistogramChannelizedSparse.hpp  CorrectionHistogramSparse.hpp  CorrectionManager.hpp  CorrectionOnQnVector.hpp  CorrectionProfile3DCorrelations.hpp  CorrectionProfileComponents.hpp  InputVariable.hpp  InputVariableManager.hpp  RunList.hpp
src/base/: Axis.hpp  Axis.test.cpp  BootStrap.cpp  CMakeLists.txt  DataContainer.test.cpp  DataContainerHelper.cpp  FitResult.cpp  QVector.cpp  QVector.hpp  QVector.test.cpp  QnToolsBaseLinkDef.h  ReSamples.cpp  ReSamples.hpp  StatCalculate.cpp  StatCalculate.test.cpp  StatCollect.cpp  StatCollect.test.cpp  Statistics.cpp  Statistics.test.cpp  Stats.cpp
src/correction/: Alignment.cpp  CMakeLists.txt  CorrectionAxisSet.hpp  CorrectionCuts.hpp  CorrectionDataVector.hpp  CorrectionHistogramBase.cpp  CorrectionHistogramChannelizedSparse.cpp  CorrectionHistogramSparse.cpp  CorrectionManager.cpp  CorrectionManager.hpp  CorrectionOnInputData.hpp  CorrectionProfile3DCorrelations.cpp  CorrectionProfileChannelized.cpp  CorrectionProfileChannelized.hpp  CorrectionProfileChannelizedIngress.cpp  CorrectionProfileChannelizedIngress.hpp  CorrectionProfileComponents.cpp  CorrectionProfileCorrelationComponents.cpp  CorrectionProfileCorrelationComponents.hpp  CorrectionsSet.hpp  Detector.cpp  Detector.hpp  DetectorList.hpp  GainEqualization.cpp  GainEqualization.hpp  InputVariableManager.hpp  QAHistogram.cpp  QAHistogram.hpp  QnToolsCorrectionLinkDef.h  Recentering.cpp  Recentering.hpp  SubEvent.cpp  SubEvent.hpp  SubEventChannels.cpp  SubEventChannels.hpp  SubEventTracks.cpp  SubEventTracks.hpp  TwistAndRescale.cpp  TwistAndRescale.hpp
src/dataframe/: CMakeLists.txt  QnDataFrame.hpp
src/dataframe/common/: AverageHelper.hpp  AverageHelper.test.cpp  AxesConfiguration.hpp  AxesConfiguration.test.cpp  BinningEqualizer.hpp  EqualBinningHelper.hpp  QVectorFunctor.hpp  QVectorFunctor.test.cpp  QVectorHelper.hpp  QVectorHelper.test.cpp  QVectorNormalizationFunctor.hpp  QVectorNormalizationFunctor.test.cpp  QVectorNormalizationHelper.hpp  QVectorNormalizationHelper.test.cpp  TemplateFunctions.hpp  TemplateHelpers.hpp
src/dataframe/correction/: CorrectionAction.hpp  CorrectionAction.test.cpp  CorrectionBuilder.hpp  CorrectionBuilder.test.cpp  RecenterAction.hpp  RecenterAction.test.cpp  RecenterVector.hpp  RecenterVector.test.cpp
src/dataframe/correlation/: CorrelationAction.hpp  CorrelationAction.test.cpp  CorrelationBuilder.hpp  CorrelationBuilder.test.cpp  CorrelationFunctions.hpp  ReSampleFunctor.hpp  ReSampleHelper.hpp
src/dataframe/toymc/: ChannelDetectorFunctor.hpp  ChannelDetectorFunctor.test.cpp  ParticleGeneratorFunctor.hpp  ParticleGeneratorFunctor.test.cpp  TrackingDetectorFunctor.hpp  TrackingDetectorFunctor.test.cpp
tests/: CMakeLists.txt.in
tests/base/: CMakeLists.txt  TestAxis.cpp
tests/correction/: CMakeLists.txt  TestCuts.cpp
tests/dataframe/: correction_file.root  histos.root  mctest.cpp  simulation.cpp  toymc.cpp
tests/simulation/: CMakeLists.txt  ChannelDetector.hpp  ParticleGenerator.hpp  ToyMCSimulation.cpp  TrackingDetector.hpp
