set(SOURCES ToyMCSimulation.cpp)
add_executable(QnToolsSimulationTests ${SOURCES})
target_include_directories(QnToolsSimulationTests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/simulation)
target_link_libraries(QnToolsSimulationTests PRIVATE gtest_main QnToolsCorrection QnToolsDataFrame PRIVATE ROOT::Core ROOT::Hist)
gtest_add_tests(TARGET QnToolsSimulationTests)
